--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,13 +1,16 @@
 body {
-    padding:0;
-    margin:0;
-    box-sizing: border-box;
-    font-family: sans-serif;
-    padding: 1rem;
-  }
-  #header{
-    background-color: grey;
-  }
-#footer{
-    background-color: grey;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: sans-serif;
+  padding: 1rem;
+}
+#header {
+  background-color: grey;
+}
+#footer {
+  background-color: grey;
+}
+.supprimer {
+  color: red;
 }
